--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@types/bluebird": "^3.5.25",
     "@types/fs-extra": "^8.0.1",
     "@types/koa": "^2.11.0",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/node-fetch": "^2.5.4",
     "@types/node-telegram-bot-api": "^0.30.4",
     "@types/ramda": "^0.25.47",
     "@types/superagent": "^3.8.6",
     "@types/yargs": "^13.0.3",
+    "@waves/blockchain-api": "0.0.5",
     "@waves/data-entities": "^1.8.0",
     "@waves/signature-generator": "^5.0.0",
     "@waves/waves-transactions": "^3.24.0",
     "bluebird": "^3.5.3",
     "fs-extra": "^8.1.0",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
     "node-fetch": "^2.6.0",
     "node-telegram-bot-api": "^0.40.0",
     "ramda": "^0.26.1",
@@ -26,9 +29,11 @@
     "typescript": "^3.3.1",
     "yargs": "^15.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ts-node": "^8.5.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
