--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/node-fetch": "^2.5.4",
     "@types/node-telegram-bot-api": "^0.30.4",
-    "@types/ramda": "^0.25.47",
+    "@types/ramda": "^0.25.51",
     "@types/superagent": "^3.8.6",
     "@types/yargs": "^13.0.3",
+    "@waves/bignumber": "0.0.1",
     "@waves/data-entities": "^1.8.0",
-    "@waves/node-api-js": "0.0.1",
+    "@waves/node-api-js": "0.0.3",
     "@waves/signature-generator": "^5.0.0",
     "@waves/waves-transactions": "^3.24.0",
     "bluebird": "^3.5.3",
